added perms, better status, pre nameupdate