@@ -27,19 +27,22 @@ public class ReplacerAgent {
         } catch (AttachNotSupportedException e) {
             log.severe("Could not attach -> plugin version compatibility not enabled");
             e.printStackTrace();
-            throw new RuntimeException("Could not attach VM");
+            throw new RuntimeException("Could not attach VM",e);
         } catch (IOException e) {
             log.severe("Could not attach because of IOException -> plugin version compatibility not enabled");
+            if(!System.getProperty("java.version","[version_unknown]").startsWith("1")) {
+                log.severe("If you are running version java 9 or above, you need to use the java argument -Djdk.attach.allowAttachSelf=true");
+            }
             e.printStackTrace();
-            throw new RuntimeException("Could not attach VM");
+            throw new RuntimeException("Could not attach VM",e);
         } catch (AgentLoadException e) {
             log.severe("Could not attach because of AgentLoadException. This is unusual. -> plugin version compatibility not enabled");
             e.printStackTrace();
-            throw new RuntimeException("Could not attach VM");
+            throw new RuntimeException("Could not attach VM",e);
         } catch (AgentInitializationException e) {
             log.severe("Could not attach because of AgentInitializationException. This is unusual. -> plugin version compatibility not enabled");
             e.printStackTrace();
-            throw new RuntimeException("Could not attach VM");
+            throw new RuntimeException("Could not attach VM",e);
         }
     }
 }
